arduino-ide-extension/src/browser/style/boards-config-dialog.css
div#select-board-dialog {
  margin: 5px;
}

div#select-board-dialog .selectBoardContainer .body {
  display: flex;
  overflow: hidden;
}

.select-board-dialog .head {
  margin: 5px;
}

div.dialogContent.select-board-dialog > div.head .title {
  font-weight: 400;
  letter-spacing: 0.02em;
  font-size: 1.2em;
  color: var(--theia-arduino-branding-primary);
  margin-bottom: 10px;
}

div#select-board-dialog .selectBoardContainer .body .list .item.selected {
  background: var(--theia-secondaryButton-hoverBackground);
}

div#select-board-dialog .selectBoardContainer .body .list .item.selected i {
  color: var(--theia-arduino-branding-primary);
}

#select-board-dialog .selectBoardContainer .search,
#select-board-dialog .selectBoardContainer .search input,
#select-board-dialog .selectBoardContainer .list,
#select-board-dialog .selectBoardContainer .list {
  background: var(--theia-editor-background);
}

#select-board-dialog .selectBoardContainer .body .search input {
  border: none;
  width: 100%;
  height: auto;
  max-height: 37px;
  padding: 10px 5px 10px 10px;
  margin: 0;
  vertical-align: top;
  display: flex;
  color: var(--theia-editor-foreground);
}

#select-board-dialog .selectBoardContainer .body .search input:focus {
  box-shadow: none;
}

#select-board-dialog .selectBoardContainer .body .container {
  flex: 1;
  padding: 0px 10px 0px 0px;
  min-width: 240px;
  max-width: 240px;
}

#select-board-dialog .selectBoardContainer .body .left.container .content {
  margin: 0 5px 0 0;
}

#select-board-dialog .selectBoardContainer .body .right.container .content {
  margin: 0 0 0 5px;
}

#select-board-dialog .selectBoardContainer .body .container .content .title {
  color: #7f8c8d;
  padding: 0px 0px 10px 0px;
  text-transform: uppercase;
}

#select-board-dialog .selectBoardContainer .body .container .content .footer {
  padding: 10px 5px 10px 0px;
}

#select-board-dialog .selectBoardContainer .body .container .content .loading {
  font-size: var(--theia-ui-font-size1);
  color: var(--theia-arduino-branding-secondary);
  padding: 10px 5px 10px 10px;
  text-transform: uppercase;
  /* The max, min-height comes from `.body .list` 200px + 47px top padding - 2 * 10px top padding */
  max-height: 227px;
  min-height: 227px;
}

#select-board-dialog .selectBoardContainer .body .list .item {
  padding: 10px 5px 10px 10px;
  display: flex;
  justify-content: end;
  white-space: nowrap;
  overflow-x: hidden;
}

#select-board-dialog .selectBoardContainer .body .list .item .selected-icon {
  margin-left: auto;
}

#select-board-dialog .selectBoardContainer .body .list .item .details {
  font-size: var(--theia-ui-font-size1);
  opacity: var(--theia-mod-disabled-opacity);
  width: 155px; /* used heuristics for the calculation */
  white-space: pre;
  overflow: hidden;
  text-overflow: ellipsis;
}

#select-board-dialog .selectBoardContainer .body .list .item.missing {
  opacity: var(--theia-mod-disabled-opacity);
}

#select-board-dialog .selectBoardContainer .body .list .item:hover {
  background: var(--theia-secondaryButton-hoverBackground);
}

#select-board-dialog .selectBoardContainer .body .list .label {
  max-width: 215px;
  width: 215px;
  white-space: pre;
  overflow: hidden;
  text-overflow: ellipsis;
}

#select-board-dialog .selectBoardContainer .body .list {
  max-height: 200px;
  min-height: 200px;
  overflow-y: auto;
}

#select-board-dialog .selectBoardContainer .body .ports.list {
  margin: 47px 0px 0px 0px; /* 47 is 37 as input height for the `Boards`, plus 10 margin bottom. */
}

#select-board-dialog .selectBoardContainer .body .search {
  margin-bottom: 10px;
  display: flex;
  align-items: center;
  padding-right: 5px;
}

.p-Widget.dialogOverlay .dialogContent.select-board-dialog {
  width: 500px;
}

.arduino-boards-toolbar-item-container {
  align-items: center;
  background: var(--theia-arduino-toolbar-dropdown-background);
  border-radius: 1px;
  color: var(--theia-arduino-toolbar-dropdown-label);
  display: flex;
  gap: 10px;
  height: 28px;
  margin: 0 4px;
  overflow: hidden;
  padding: 0 10px;
  width: 210px;
}

.arduino-boards-toolbar-item--protocol, 
.arduino-boards-dropdown-item--protocol {
  align-items: center;
  display: flex;
  font-size: 16px;
}

.arduino-boards-toolbar-item--protocol {
  color: var(--theia-arduino-toolbar-dropdown-label);
}

.arduino-boards-dropdown-item--protocol {
  color: var(--theia-arduino-toolbar-dropdown-label);
}

.arduino-boards-toolbar-item-container
  .arduino-boards-toolbar-item {
  display: flex;
  align-items: baseline;
  width: 100%;
}

.arduino-boards-toolbar-item--label {
  height: 100%;
  display: flex;
  align-items: center;
  width: 100%;
}

.arduino-boards-toolbar-item--label-connected {
  font-weight: 700;
}

.arduino-boards-toolbar-item-container .caret {
  width: 10px;
  margin-right: 5px;
}

.arduino-boards-dropdown-list {
  margin: -1px;
  z-index: 1;
  border: 1px solid var(--theia-arduino-toolbar-dropdown-border);
}

.arduino-boards-dropdown-list:focus {
  border: 1px solid var(--theia-arduino-toolbar-dropdown-borderActive);
}

.arduino-boards-dropdown-list--items-container {
  overflow: auto;
  max-height: 404px;
}

.arduino-boards-dropdown-list--items-container::-webkit-scrollbar {
  background: var(--theia-arduino-toolbar-dropdown-background);
}

.arduino-boards-dropdown-item {
  background: var(--theia-arduino-toolbar-dropdown-background);
  color: var(--theia-arduino-toolbar-dropdown-label);
  cursor: default;
  display: flex;
  font-size: var(--theia-ui-font-size1);
  gap: 10px;
  justify-content: space-between;
  padding: 10px;
}

.arduino-boards-dropdown-item--label {
  flex: 1;
}

.arduino-boards-dropdown-item--board-label {
  font-size: 14px;
}

.arduino-boards-dropdown-item--port-label {
  font-size: 12px;
}

.arduino-boards-dropdown-item:hover {
  background: var(--theia-arduino-toolbar-dropdown-option-backgroundHover);
}

.arduino-boards-dropdown-item--selected,
.arduino-boards-dropdown-item--selected:hover {
  background: var(--theia-arduino-toolbar-dropdown-option-backgroundSelected);
  border: 1px solid var(--theia-arduino-toolbar-dropdown-option-backgroundSelected);
}

.arduino-boards-dropdown-item--selected
  .arduino-boards-dropdown-item--port-label {
    color: var(--theia-arduino-toolbar-dropdown-label);
}

.arduino-boards-dropdown-item--selected .fa {
  color: var(--theia-arduino-toolbar-dropdown-iconSelected);
}

.arduino-boards-dropdown-item .fa-check {
  align-self: center;
}

.arduino-board-dropdown-footer {
  color: var(--theia-arduino-branding-primary);
  border-top: 1px solid var(--theia-arduino-toolbar-dropdown-border);
}

